# TnMan

./: .gitignore  README.md  pyproject.toml  tpm.py
data/calibration/: benchmark_scenarios.json
data/players/: atp_profiles.json  atp_profiles.preview.json
docs/: 01-product-vision.md  02-roadmap.md  03-simulation-model.md  04-data-and-calibration.md  05-architecture.md  06-testing-and-acceptance.md  07-calibration-plan.md  08-roster-generation.md  09-web-ui-plan.md  10-api-contracts.md  11-match-report-model.md  12-design-system.md
scripts/: build_atp_top_100_roster.py  dev-backend.sh  dev-frontend.sh  fetch_tennis_abstract_charting.py  python_with_local_deps.py  setup-dev.sh  test-backend.sh
src/tennis_pro_manager/: __init__.py  analysis.py  api.py  calibration.py  cli.py  ingest.py  models.py  reporting.py  roster.py  scoring.py  simulator.py  tennis_abstract.py  web_payloads.py
tests/: __init__.py  test_cli.py  test_models.py  test_reporting.py  test_roster.py  test_scoring.py  test_simulator.py  test_tennis_abstract.py  test_web_payloads.py
tests/fixtures/: calibration_scenarios.json
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
web/src/: App.tsx  api.ts  styles.css  types.ts
